--- a/erlelo_config_1ch.json
+++ b/erlelo_config_1ch.json
@@ -2,7 +2,6 @@
   "version": "2.6.1",
   "description": "ERLELO Climate Control System - 1 Chamber Configuration",
   "chambers": 1,
-  
   "hardware_config": {
     "chamber_1": {
       "description": "Chamber 1 Hardware Configuration",
@@ -38,7 +37,6 @@
       "humi_register": 1
     }
   },
-  
   "default_control_constants": {
     "deltahi_kamra_homerseklet": 15,
     "deltalo_kamra_homerseklet": 10,
@@ -68,78 +66,77 @@
     "sleep_off_minutes": 5,
     "init_duration": 32
   },
-  
   "variables": [
     {
       "name": "kamra_homerseklet_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Current chamber temperature (°C × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Current chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_para_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Current chamber humidity (% × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Current chamber humidity (% \u00d7 10)"
     },
     {
       "name": "kamra_homerseklet_raw_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Raw chamber temperature from sensor"
     },
     {
       "name": "kamra_para_raw_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch1",
       "type": "integer",
-      "default_value": "150",
-      "description": "Chamber 1: Target chamber temperature (°C × 10)"
+      "default_value": 150,
+      "description": "Chamber 1: Target chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_cel_para_ch1",
       "type": "integer",
-      "default_value": "750",
-      "description": "Chamber 1: Target chamber humidity (% × 10)"
+      "default_value": 750,
+      "description": "Chamber 1: Target chamber humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch1",
       "type": "integer",
-      "default_value": "150",
-      "description": "Chamber 1: Target supply air temperature (°C × 10)"
+      "default_value": 150,
+      "description": "Chamber 1: Target supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_cel_para_ch1",
       "type": "integer",
-      "default_value": "750",
-      "description": "Chamber 1: Target supply air humidity (% × 10)"
+      "default_value": 750,
+      "description": "Chamber 1: Target supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Current supply air temperature (°C × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Current supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_para_akt_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Current supply air humidity (% × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Current supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_raw_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Raw supply air temperature from sensor"
     },
     {
       "name": "befujt_para_raw_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Raw supply air humidity from sensor"
     },
     {
@@ -169,13 +166,13 @@
     {
       "name": "befujt_hibaszam_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Chamber sensor error count"
     },
     {
@@ -199,38 +196,38 @@
     {
       "name": "ah_kamra_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Absolute humidity chamber (g/m³ × 100)"
+      "default_value": 0,
+      "description": "Chamber 1: Absolute humidity chamber (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_befujt_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Absolute humidity supply (g/m³ × 100)"
+      "default_value": 0,
+      "description": "Chamber 1: Absolute humidity supply (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_cel_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Target absolute humidity (g/m³ × 100)"
+      "default_value": 0,
+      "description": "Chamber 1: Target absolute humidity (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "dp_kamra_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Dew point chamber (°C × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Dew point chamber (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_befujt_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Dew point supply (°C × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Dew point supply (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_cel_ch1",
       "type": "integer",
-      "default_value": "0",
-      "description": "Chamber 1: Target dew point (°C × 10)"
+      "default_value": 0,
+      "description": "Chamber 1: Target dew point (\u00b0C \u00d7 10)"
     },
     {
       "name": "ah_dp_table_ch1",
@@ -253,13 +250,13 @@
     {
       "name": "suly_meres_akt_1_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Weight sensor 1 current"
     },
     {
       "name": "suly_meres_akt_2_ch1",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Chamber 1: Weight sensor 2 current"
     },
     {
@@ -271,25 +268,25 @@
     {
       "name": "kulso_homerseklet_glbl",
       "type": "integer",
-      "default_value": "0",
-      "description": "Global: Current outdoor temperature (°C × 10)"
+      "default_value": 0,
+      "description": "Global: Current outdoor temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kulso_para_glbl",
       "type": "integer",
-      "default_value": "0",
-      "description": "Global: Current outdoor humidity (% × 10)"
+      "default_value": 0,
+      "description": "Global: Current outdoor humidity (% \u00d7 10)"
     },
     {
       "name": "kulso_homerseklet_raw_glbl",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Global: Raw outdoor temperature"
     },
     {
       "name": "kulso_para_raw_glbl",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Global: Raw outdoor humidity"
     },
     {
@@ -313,7 +310,7 @@
     {
       "name": "kulso_hibaszam_glbl",
       "type": "integer",
-      "default_value": "0",
+      "default_value": 0,
       "description": "Global: Outdoor sensor error count"
     },
     {
