--- a/erlelo_config_1ch.json
+++ b/erlelo_config_1ch.json
@@ -69,73 +69,73 @@
   "variables": [
     {
       "name": "kamra_homerseklet_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Current chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_para_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Current chamber humidity (% \u00d7 10)"
     },
     {
       "name": "kamra_homerseklet_raw_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Raw chamber temperature from sensor"
     },
     {
       "name": "kamra_para_raw_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Raw chamber humidity from sensor"
     },
     {
       "name": "kamra_cel_homerseklet_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 150,
       "description": "Chamber 1: Target chamber temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kamra_cel_para_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 750,
       "description": "Chamber 1: Target chamber humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_cel_homerseklet_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 150,
       "description": "Chamber 1: Target supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_cel_para_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 750,
       "description": "Chamber 1: Target supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_akt_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Current supply air temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "befujt_para_akt_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Current supply air humidity (% \u00d7 10)"
     },
     {
       "name": "befujt_homerseklet_raw_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Raw supply air temperature from sensor"
     },
     {
       "name": "befujt_para_raw_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Raw supply air humidity from sensor"
     },
@@ -165,13 +165,13 @@
     },
     {
       "name": "befujt_hibaszam_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Supply sensor error count"
     },
     {
       "name": "kamra_hibaszam_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Chamber sensor error count"
     },
@@ -195,37 +195,37 @@
     },
     {
       "name": "ah_kamra_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Absolute humidity chamber (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_befujt_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Absolute humidity supply (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "ah_cel_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Target absolute humidity (g/m\u00b3 \u00d7 100)"
     },
     {
       "name": "dp_kamra_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Dew point chamber (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_befujt_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Dew point supply (\u00b0C \u00d7 10)"
     },
     {
       "name": "dp_cel_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Target dew point (\u00b0C \u00d7 10)"
     },
@@ -249,13 +249,13 @@
     },
     {
       "name": "suly_meres_akt_1_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Weight sensor 1 current"
     },
     {
       "name": "suly_meres_akt_2_ch1",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Chamber 1: Weight sensor 2 current"
     },
@@ -267,25 +267,25 @@
     },
     {
       "name": "kulso_homerseklet_glbl",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Global: Current outdoor temperature (\u00b0C \u00d7 10)"
     },
     {
       "name": "kulso_para_glbl",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Global: Current outdoor humidity (% \u00d7 10)"
     },
     {
       "name": "kulso_homerseklet_raw_glbl",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Global: Raw outdoor temperature"
     },
     {
       "name": "kulso_para_raw_glbl",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Global: Raw outdoor humidity"
     },
@@ -309,7 +309,7 @@
     },
     {
       "name": "kulso_hibaszam_glbl",
-      "type": "integer",
+      "type": "int",
       "default_value": 0,
       "description": "Global: Outdoor sensor error count"
     },
